CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

IF(LUAROCKS_PREFIX)
  MESSAGE(STATUS "Installing extracunn through Luarocks")
  STRING(REGEX REPLACE "(.*)lib/luarocks/rocks.*" "\\1" CMAKE_INSTALL_PREFIX  "${LUAROCKS_PREFIX}")
  MESSAGE(STATUS "Prefix inferred from Luarocks: ${CMAKE_INSTALL_PREFIX}")
ENDIF()

FIND_PACKAGE(CUDA REQUIRED)
LIST(APPEND CUDA_NVCC_FLAGS "-arch=sm_30")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,-export-dynamic")

FIND_PACKAGE(Torch REQUIRED)
INCLUDE_DIRECTORIES("${Torch_INSTALL_INCLUDE}/THC")
INCLUDE_DIRECTORIES("${Torch_INSTALL_INCLUDE}/../../extra/cunn/lib/THCUNN")
LINK_DIRECTORIES("${Torch_INSTALL_LIB}")

#MESSAGE("${Torch_INSTALL_INCLUDE}")
#MESSAGE("${Torch_INSTALL_LIB}")


FILE(GLOB luasrc *.lua)
FILE(GLOB src-cuda *.cu)
set(package extracunn)

ADD_TORCH_PACKAGE(${package} "${src-cuda}" "${luasrc}" "extra layers in cunn")
TARGET_LINK_LIBRARIES(${package} luaT THC TH)

IF(LUALIB)
  TARGET_LINK_LIBRARIES(${package} ${LUALIB})
ENDIF()

if(src-cuda)
  SET_TARGET_PROPERTIES(${package} PROPERTIES
     PREFIX "lib"
     IMPORT_PREFIX "lib"
     INSTALL_NAME_DIR "@executable_path/${Torch_INSTALL_BIN2CPATH}")

  INSTALL(TARGETS ${package} 
     RUNTIME DESTINATION ${Torch_INSTALL_LUA_CPATH_SUBDIR}
     LIBRARY DESTINATION ${Torch_INSTALL_LUA_CPATH_SUBDIR})
ENDIF(src-cuda)

IF(luasrc)
    INSTALL(FILES ${luasrc} 
    DESTINATION ${Torch_INSTALL_LUA_PATH_SUBDIR}/${package})
ENDIF(luasrc)

